<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.phyzicsz</groupId>
        <artifactId>parsec</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>
    <artifactId>parsec-reflections</artifactId>
    <packaging>jar</packaging>
    <properties>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
        
        <javassist.version>3.26.0-GA</javassist.version>
        
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>${javassist.version}</version>
            <optional>false</optional> <!-- case: when not actually scanning with javassist or if using {@link Reflections.collect()} -->
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.30</version>
            <optional>true</optional> <!-- case: when logging is not needed -->
        </dependency>

        <dependency>
            <groupId>org.dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>2.1.1</version>
            <optional>true</optional> <!-- case: when no xml de/serialization -->
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
            <optional>true</optional> <!-- case: when no json de/serialization -->
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
            <optional>true</optional> <!-- case: when no servlet environment -->
        </dependency>

        <!-- use any implementation you like -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.24</version>
            <optional>true</optional> <!-- case: when other logging implementation used or logging is not needed -->
        </dependency>

        <dependency>
            <groupId>org.jboss</groupId>
            <artifactId>jboss-vfs</artifactId>
            <version>3.2.12.Final</version>
            <scope>provided</scope>
            <optional>true</optional><!-- case: when using jboss-vfs -->
        </dependency>
        
        <!--test dependencies-->
         <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest</artifactId>
            </dependency>

    </dependencies>
</project>